--- a/redmine_dmsf/assets/stylesheets/dmsf.css
+++ b/redmine_dmsf/assets/stylesheets/dmsf.css
@@ -113,7 +113,7 @@ div.right_icon_box img.detail_icon {
 	margin-left: 110px;
 }
 
-.dmsf_revision label {
+.dmsf_detail label {
 	font-weight: bold;
 	width: 100px;
 	float: left;
