--- a/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
@@ -1,13 +1,46 @@
 <% html_title(l(:dmsf)) %>
 
 <div class="contextual">
+	<% if User.current.allowed_to?(:file_manipulation, @project) %>
+		<% unless @file.locked_for_user? && !User.current.allowed_to?(:force_file_unlock, @project)%>
+			<% 	if @file.locked? %>
+				<%= link_to(image_tag("unlock.png", :plugin => "redmine_dmsf"),
+		        	{:controller => "dmsf_state", :action => "unlock_file", :id => @project, :file_id => @file,
+						:current => request.url },
+					:title => l(:title_unlock_file)) %>
+			<% 	else %>
+				<%= link_to(image_tag("lock.png", :plugin => "redmine_dmsf"),
+		        	{:controller => "dmsf_state", :action => "lock_file", :id => @project, :file_id => @file,
+						:current => request.url },
+					:title => l(:title_lock_file)) %>
+			<% 	end %> 
+		<% end %>
+		<% if User.current.allowed_to?(:file_manipulation, @project) && !@file.locked_for_user? %>
+			&nbsp;
+			<%= link_to(image_tag("delete.png", :plugin => "redmine_dmsf"), 
+				{:controller => "dmsf_detail", :action => "delete_file", :id => @project, 
+				:file_id => @file}, :class => "delete-entry", :title => l(:title_delete)) %>
+		<% end %>
+		<% if User.current.allowed_to?(:file_approval, @project) %>
+			&nbsp;
+			<% if @file.notification %>
+				<%= link_to(image_tag("notify.png", :plugin => "redmine_dmsf"),
+	        		{:controller => "dmsf_state", :action => "file_notify_deactivate", :id => @project, 
+					:file_id => @file, :current => request.url }, :title => l(:title_notifications_active_deactivate)) %>
+			<% else %>
+				<%= link_to(image_tag("notifynot.png", :plugin => "redmine_dmsf"),
+	        		{:controller => "dmsf_state", :action => "file_notify_activate", :id => @project, 
+					:file_id => @file, :current => request.url}, :title => l(:title_notifications_not_active_activate)) %>
+			<% end %>
+		<% end %>
+	<% end %>
 </div>
 
 <% path = @file.folder.nil? ? [] : @file.folder.dmsf_path %>
 <h2>
 <%= render(:partial => "/dmsf/path", :locals => {:path => path}) %>
 / 
-<%= h(@file.last_revision.title) %> <div style="float: right"><%= h(@file.name) %></div>
+<%= h(@file.last_revision.title) %>
 <% if @file.notification %>
 	<%= image_tag("notify.png", :plugin => "redmine_dmsf",
 		:title => l(:title_notifications_active)) %>
@@ -22,12 +55,14 @@
 <% @file.revisions.each do |revision| %>
 <div class="box dmsf_detail">
 	<div style="float:right">
-		<%=  link_to(l(:title_download),
-          {:controller=>"dmsf", :action => "download_revision", :id => @project, :revision_id => revision}) %>
+		<%= link_to(image_tag("download.png", :plugin => "redmine_dmsf"),
+	        {:controller=>"dmsf", :action => "download_revision", :id => @project, :revision_id => revision},
+			:title => l(:title_title_version_version_download, :title => h(revision.title), :version => revision.version)) %>
 		<% if User.current.allowed_to?(:file_approval, @project) %>
-			| <%=  link_to(l(:title_delete),
-	          {:action => "delete_revision", :id => @project, :revision_id => revision},
-			  :class => "delete-link", :title => l(:title_delete_revision)) %>
+			&nbsp;
+			<%= link_to(image_tag("delete.png", :plugin => "redmine_dmsf"),
+		        {:action => "delete_revision", :id => @project, :revision_id => revision},
+				:class => "delete-revision", :title => l(:title_delete_revision)) %>
 		<% end %>
 	</div>
 		<p class="no-ident">
@@ -94,8 +129,12 @@
 		jQuery.noConflict();
 		
 		jQuery(document).ready(function() {
-			jQuery("a.delete-link").click(function(event) {
+			jQuery("a.delete-revision").click(function(event) {
 				if(!window.confirm("<%= l(:question_do_you_really_want_to_delete_this_revision) %>")) event.preventDefault();
+			})
+			
+			jQuery("a.delete-entry").click(function(event) {
+				if(!window.confirm("<%= l(:question_do_you_really_want_to_delete_this_entry) %>")) event.preventDefault();
 			})
 			
 			jQuery("#fileFileUpload").change(function() {
