* fixed Issue 8: Allow to enter workflow in upload/commit form * improved UI for commiting uploads
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@52 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_detail/upload_files.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/upload_files.html.erb
@@ -16,7 +16,7 @@
 <%
 i = 1
 form_tag({:action => "commit_files", :id => @project, :folder_id => @folder},
-	:method=>:post, :class => "tabular") do 
+	:method=>:post) do 
 %>
 	<% @uploads.each do |upload| %>
 		<% if upload.locked %>
