--- a/redmine_dmsf/app/views/dmsf_detail/upload_files.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/upload_files.html.erb
@@ -1,4 +1,4 @@
-<% html_title("DMSF") %>
+<% html_title(l(:dmsf)) %>
 
 <div class="contextual">
 </div>
@@ -12,7 +12,7 @@
 <%= textilizable(@folder.description) unless @folder.nil? %>
 </div>
 
-<h3>Uploaded Files</h3>
+<h3><%=l(:heading_uploaded_files)%></h3>
 <%
 i = 1
 form_tag({:action => "commit_files", :id => @project, :folder_id => @folder},
@@ -26,7 +26,7 @@ form_tag({:action => "commit_files", :id => @project, :folder_id => @folder},
 		<% end %>
 		<% i += 1 %>
 	<% end %>
-	<%= submit_tag("Commit") %>
+	<%= submit_tag(l(:submit_commit)) %>
 <% end %>
 
 <% content_for :header_tags do %>
