* included Issue 32: Traslation improve * version moved to 0.7.0
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@56 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/_path.html.erb
+++ b/redmine_dmsf/app/views/dmsf/_path.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("Documents", {:controller => "dmsf", :action => "index", :id=> @project }) %>
+<%= link_to(l(:link_documents), {:controller => "dmsf", :action => "index", :id=> @project }) %>
 <% path.each do |path_element| %>
  / 
  <%= link_to(h(path_element.name), {:controller => "dmsf", :action => "index", :id=> @project, :folder_id => path_element}) %>
